# RobotArmTraining

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml
backend/api/: trajectory.py  ws_telemetry.py
backend/models/: pose.py  robot.py  trajectory_schemas.py
backend/services/: camera_client.py  robot_client.py
backend/services/trajectory/: bezier.py  equal_arc_length.py  trajectory.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: types.ts
frontend/src/lib/adapter/: telemetry.ts  trajectory.ts
frontend/src/lib/components/: CamStream.svelte  ControlPanel.svelte  NavBar.svelte  Scene.svelte  TestPanel.svelte  robotController.ts
frontend/src/lib/components/robotVisualization/: RobotCanvas.svelte  robotViewer.ts
frontend/src/lib/components/splineVisualization/: spline.ts  splineViewer.ts
frontend/src/lib/state/: robotState.ts  splineObject.ts  trainingState.ts  trajectoryState.ts  videoStream.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/test/: +page.svelte
frontend/static/robot/meshes/gripper/collision/: gripper_link1.dae  gripper_link_finger.dae
frontend/static/robot/meshes/gripper/visual/: gripper_link2.dae
frontend/static/robot/urdf/: gripper.urdf  lm3.urdf  lm3_l1.urdf  lm3_l1_macro.urdf  lm3_l1_with_gripper.urdf  lm3_with_gripper.urdf  two_lm3.urdf
