[project]
name = "robot-training-backend"
version = "0.1.0"
description = "FastAPI backend for robot training"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "click==8.4.2",
    "fastapi==0.139.0",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.18",
    "numpy==2.5.1",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "starlette==1.3.1",
    "typing_extensions==4.16.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.50.0",
    "uvloop==0.22.1",
    "watchfiles==1.2.0",
    "websockets==16.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]